--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,7 @@
     app:startDestination="@id/firstFragment">
     <fragment
         android:id="@+id/firstFragment"
-        android:name="inc.fabudi.lists.FirstFragment"
+        android:name="inc.fabudi.lists.first.FirstFragment"
         android:label="FirstFragment" />
     <fragment
         android:id="@+id/secondFragment"
