- Add icons  - Glide  - Custom Item-view 3 lines  - RecyclerView  - Square avatars  - Internet permission

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:label="FirstFragment" />
     <fragment
         android:id="@+id/secondFragment"
-        android:name="inc.fabudi.lists.SecondFragment"
+        android:name="inc.fabudi.lists.second.SecondFragment"
         android:label="SecondFragment" />
     <fragment
         android:id="@+id/thirdFragment"
