- Add icon  - Custom Card item-view  - RecyclerView

--- a/app/src/main/res/layout/third_layout.xml
+++ b/app/src/main/res/layout/third_layout.xml
@@ -5,16 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:text="3"
-        android:textColor="#000000"
-        android:textSize="96sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/third_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
