--- a/app/src/main/res/layout/fourth_layout.xml
+++ b/app/src/main/res/layout/fourth_layout.xml
@@ -8,6 +8,7 @@
         android:id="@+id/fourth_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="16dp"
         app:layoutManager="StaggeredGridLayoutManager"
         app:spanCount="2" />
 </LinearLayout>
