- Glide  - Internet-permission  - icons  - Swipe-to-Refresh  - FAB to reset items  - ProgressView  - EmptyView message

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,6 @@
         android:label="FourthFragment" />
     <fragment
         android:id="@+id/fifthFragment"
-        android:name="inc.fabudi.lists.FifthFragment"
+        android:name="inc.fabudi.lists.fifth.FifthFragment"
         android:label="FifthFragment" />
 </navigation>
